--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@
        url('../fonts/lato-v23-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+.wrapper {
+  max-width: 1060px;
+  margin: 0 auto; /* выравнивает по центру внутри родителя */
+}
