--- a/style.css
+++ b/style.css
@@ -33,7 +33,20 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  font-family: "Lato";
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #102746;
+}
+
 .wrapper {
   max-width: 1060px;
   margin: 0 auto; /* выравнивает по центру внутри родителя */
+}
+
+.header {
+  background: darkgrey;
 }
