--- a/style.css
+++ b/style.css
@@ -49,4 +49,30 @@ body {
 
 .header {
   background: darkgrey;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.header__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.header__list{
+  display: flex;
+  flex-wrap: wrap;    
+}
+.header__item {
+  margin-right: 82px;
+}
+.header__item:last-child{
+  margin-right: 0;
+}
+.header__link {
+  font-size: 18px;
+  line-height: 24px;
+  color: white;
+  text-decoration: none;
 }
