--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   max-width: 1060px;
   margin: 0 auto; /* выравнивает по центру внутри родителя */
 }
-
+/* header start */
 .header {
   background: darkgrey;
   position: fixed;
@@ -59,6 +59,7 @@ body {
   flex-wrap: wrap;
   align-items: flex-end;
   justify-content: space-between;
+  padding-top: 56px;
 }
 .header__list{
   display: flex;
@@ -75,4 +76,13 @@ body {
   line-height: 24px;
   color: white;
   text-decoration: none;
+}
+.header__link:hover, .header__link:focus, .header__link:active {
+  opacity: .75%;
+}
+/* header end*/
+
+/* main start*/
+.intro{
+  height: 100vh;
 }
