--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   font-size: 16px;
   line-height: 1.2;
   font-weight: normal;
-  color: #102746;
+  color: whitesmoke/*#102746*/;
 }
 
 .wrapper {
@@ -86,4 +86,28 @@ body {
   height: 100vh;
   background: url(img/intro_bg.jpg) no-repeat center;
   background-size: cover;
+  padding-top: 263px;
+}
+.intro__title {
+  max-width: 619px;
+  font-weight: 500;
+  font-size: 50px;
+  line-height: 60px;
+  color: #FFFFFF;
+  margin-bottom: 22px;
+}
+
+.intro__subtitle {
+  max-width: 546px;
+  margin-bottom: 59px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+.search-form__info{
+  display: flex;
+  flex-wrap: wrap;
+}
+.search-form__field{
+  
 }
