--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 
 /* main start*/
 .intro{
-  height: 100vh;
+  min-height: 100vh;
   background: url(img/intro_bg.jpg) no-repeat center;
   background-size: cover;
   padding-top: 263px;
@@ -109,5 +109,35 @@ body {
   flex-wrap: wrap;
 }
 .search-form__field{
-  
+  width: 297px;
+  background: url(svg/Oval.svg) no-repeat left 6px;
+  background-size: 20px;
+  border: 0;
+  border-bottom: 2px solid #BFC0C5;
+  margin-right: 60px;
+  padding-left: 43px;
+  padding-bottom: 22px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: white;
+}
+.search-form__field::placeholder{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: white;
+}
+.search-form__submit{
+  padding: 15px 39px;
+  text-transform: uppercase;
+  background: #1B7DFF;
+  color: white;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  border: 0;
+}
+.search-form__submit:hover, .search-form__submit:focus, .search-form__submit:active{
+  background: #0d3d7c;
 }
