--- a/style.css
+++ b/style.css
@@ -141,3 +141,31 @@ body {
 .search-form__submit:hover, .search-form__submit:focus, .search-form__submit:active{
   background: #0d3d7c;
 }
+
+/* benefits styles*/
+.benefits_wrapper {
+  max-width: 1262px;
+  background: white;
+  margin: 0 auto;
+  box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
+  position: relative;
+}
+.benefits__title {
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 42px;
+  color: #102746;
+  padding: 93px 100px 88px 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-100%);
+  background: white;
+  width: 100%;
+}
+.benefits__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 55px;
+  
+}
