--- a/style.css
+++ b/style.css
@@ -41,11 +41,20 @@ body {
   font-weight: normal;
   color: whitesmoke/*#102746*/;
 }
-
+img {
+  max-width: 100%;
+  height: auto;
+}
 .wrapper {
   max-width: 1060px;
   margin: 0 auto; /* выравнивает по центру внутри родителя */
 }
+
+.wrapper_full {
+  max-width: 1262px;
+  margin: 0 auto;
+}
+
 /* header start */
 .header {
   position: fixed;
@@ -143,6 +152,11 @@ body {
 }
 
 /* benefits styles*/
+
+.benefits {
+  margin-bottom: 131px;
+}
+
 .benefits_wrapper {
   max-width: 1262px;
   background: white;
@@ -167,5 +181,47 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 55px;
-  
+  padding: 0 100px;
 }
+.benefits__card {
+  grid-column: span 1;
+  margin-bottom: 112px;
+}
+.benefits__card-pict {
+  max-width: 66px;
+  margin-bottom: 37px;
+}
+.benefits__card-tumb{
+  display: block;
+}
+.benefits__card-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  margin-bottom: 26px;
+}
+.benefits__card-desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000000;
+  margin-bottom: 39px;
+}
+.benefits__card-more {
+  display:inline-block;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #006DFE;
+  text-decoration: none;
+  padding-right: 59px;
+  background: url(svg/Shape.svg) no-repeat 95% center;
+  transition: .2s;
+}
+.benefits__card-more:hover, .benefits__card-more:focus {
+  background: url(svg/Shape.svg) no-repeat right center;
+}
+
+/*places start*/
+
