--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ img {
   background: url(img/intro_bg.jpg) no-repeat center;
   background-size: cover;
   padding-top: 263px;
+  padding-bottom: 223px;
 }
 .intro__title {
   max-width: 619px;
@@ -244,6 +245,10 @@ img {
 
 /*places start*/
 
+.places {
+  margin-bottom: 131px;
+}
+
 .places__caption {
   display: flex;
   flex-wrap: wrap;
@@ -277,13 +282,29 @@ img {
 .places__cards__lg {
   grid-column: span 3;
 }
+
+.places__cards__sm {
+  grid-column: span 2;
+}
+
 .places__card__pict {
+  width: 100%;
+  transition: .15s all;
+}
+.places__card__pict__lg{
   height: 354px;
   object-fit: cover;
 }
+.places__card__pict__sm {
+  height: 283px;
+  object-fit: cover;
+}
+
 .places__card {
   position: relative;
+  overflow: hidden;
 }
+
 .places__card::after {
   display: block;
   content: '';
@@ -295,6 +316,11 @@ img {
   left: 0;
   z-index: 2;
 }
+
+.places__card:hover .places__card__pict{
+  transform: scale(1.2);
+}
+
 .places__card__title {
   font-size: 50px;
   line-height: 60px;
@@ -302,4 +328,12 @@ img {
   bottom: 27px;
   left: 29px;
   z-index: 3;
+}
+.places__card__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
 }
