--- a/style.css
+++ b/style.css
@@ -341,3 +341,46 @@ img {
 
 /*prefectures*/
 
+.tours {
+  margin-bottom: 139px;
+}
+
+.tours_tour {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0 108px;
+  align-items: center;
+  margin-bottom: 77px;
+}
+
+.tour_info {
+
+}
+
+.tour_title {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 40px;
+  color: #102746;
+  margin-bottom: 85px;
+}
+
+.tour_desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #102746;
+  margin-bottom: 58px;
+}
+
+.tour_more {
+  font-size: 16px;
+  color: 006DFE;
+  text-decoration: none;
+  background: url(svg/Shape.svg) no-repeat right center;
+  padding-right: 59px;
+}
+
+.tour_more:hover {
+  opacity: .65;
+}
