--- a/style.css
+++ b/style.css
@@ -525,3 +525,29 @@ img {
   justify-content: space-between;
   width: 50%;
 }
+
+.footer_menu_title{
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.footer_menu_link{
+  color: white;
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.footer_menu_link:hover, .footer__menu-link:focus, .footer__menu-link:active{
+  opacity: .75;
+}
+
+.footer_menu_link_title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
