--- a/style.css
+++ b/style.css
@@ -48,11 +48,13 @@ img {
 .wrapper {
   max-width: 1060px;
   margin: 0 auto; /* выравнивает по центру внутри родителя */
+  padding: 0 15px;
 }
 
 .wrapper_full {
   max-width: 1262px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 .section__title{
   font-weight: 500;
@@ -115,6 +117,37 @@ img {
 .header__link:hover, .header__link:focus, .header__link:active {
   opacity: .75%;
 }
+
+.header_burger {
+  width: 40px;
+  height: 28px;
+  position: relative;
+  display: none;
+}
+
+.burger_line {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: white;
+  position: absolute;
+  left: 0;
+}
+
+.burger_line_first {
+  top: 0;
+}
+
+.burger_line_secind {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.burger_line_last {
+  bottom: 0;
+}
+
+
 /* header end*/
 
 /* main start*/
@@ -550,4 +583,72 @@ img {
   font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
+}
+
+/* media start*/ 
+
+@media screen and (max-width: 767px) {
+  .header_burger {
+    display: block;
+  }
+  .header_nav {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: black;
+    z-index: 10;
+    padding: 75px;
+    transform: translateX(100%);
+  }
+
+  .header_nav_active {
+    transform: translateX(0);
+
+  }
+
+
+  .header__item {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  .header__item:last-child {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+
+  .header__link {
+    font-size: 42px;
+    line-height: 48px;
+  }
+
+  .header_nav_close {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 11;
+  }
+
+  .header_nav_close_line {
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: white;
+    position: absolute;
+    top: 50%;
+  }
+
+  .header_nav_close_line:first-child {
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  .header_nav_close_line:last-child {
+    transform: translateY(-50%) rotate(-45deg);
+  }
 }
