--- a/style.css
+++ b/style.css
@@ -434,7 +434,7 @@ img {
 
 .top_cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-gap: 57px;
 }
 
@@ -509,6 +509,7 @@ img {
 .top_card {
   display: flex;
   flex-direction: column;
+  grid-column: span 2;
 }
 
 /*videos*/
@@ -651,5 +652,74 @@ img {
 
   .header_nav_close_line:last-child {
     transform: translateY(-50%) rotate(-45deg);
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .benefits {
+    margin-bottom: 75px;
+  }
+
+  .benefits__card {
+    margin-bottom: 60px;
+
+  }
+
+  .search-form__field {
+    margin-bottom: 25px;    
+  }
+
+  .benefits__cards {
+    padding: 0 15px;
+    grid-column-gap: 35px;
+  }
+
+  .benefits__title {
+    padding: 55px 15px;
+  }
+
+  .benefits_wrapper {
+    box-shadow: none;
+  }
+
+  .places__cards__lg {
+    grid-column: span 6;
+  }
+
+  .places__cards__sm {
+    grid-column: span 6;
+  }
+
+  .tours_tour {
+    grid-column-gap: 35px;
+  }
+
+  .tour_info {
+    padding: 0;
+  }
+
+  .tour_title {
+    margin-bottom: 15px;
+  }
+
+  .tour_desc {
+    margin-bottom: 15px;
+  }
+
+  .top_cars {
+    grid-column-gap: 25px;
+    grid-row-gap: 55px;
+  }
+
+  .top_card {
+    grid-column: span 3;
+  }
+
+  .top_card-pic {
+    margin-bottom: 25px;
+  }
+
+  .footer {
+    padding: 60px 0;
   }
 }
